Fix text alignment #60

--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -2822,7 +2822,7 @@ background-repeat: no-repeat;
 }
 
 .tf-grid p span {
-    top: 200px
+    top: 60px
 }
 
 .experiences p span {
